--- a/_config.yml
+++ b/_config.yml
@@ -119,15 +119,12 @@ author:
   location         : "Isfahan, Iran"
   email            : "mailto:parniyanjalali232@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:parniyanjalali232@gmail.com"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      # url: "https://www.linkedin.com/in/parnian-jalali-6343b8206/"
+      url: "https://www.linkedin.com/in/parnian-jalali-6343b8206/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/Parnianjalali"
+      url: "https://github.com/Parnianjalali"
    
 # Site Footer
 footer:
