--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description              : "Graduate Research Assistant in Artificial Intelligen
 url                      : "https://Parnianjalali.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Parnianjalali/Parnianjalali.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/profile_photo.png"
+teaser                   : "/assets/profile_photo.png"
+logo                     : #"/assets/profile_photo.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
